--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -19,18 +19,18 @@
     "transportation": "交通資訊",
     "restaurant": "餐宴美食",
     "ecotourism": "生態之遊",
-    "coffee_bar":"森林咖啡吧",
-    "meeting_room":"會議中心",
-    "tour_guide":"導覽服務",
-    "salmon":"櫻花鉤吻鮭"
+    "coffee_bar": "森林咖啡吧",
+    "meeting_room": "會議中心",
+    "tour_guide": "導覽服務",
+    "salmon": "櫻花鉤吻鮭"
   },
   "translation": {
     "select_language": "請選擇語言",
     "exit": "離開"
   },
   "long_stay": {
-    "slogan": "Long-stay旅居，接觸自身想體驗的休閒生活",
-    "contain1": "武陵農場替您想到了，即將推出此優惠方案",
+    "slogan": "Long-stay優惠方案",
+    "contain1": "Long-stay旅居，接觸自身想體驗的休閒生活，從事想長期嚮往的生活、做自己想做的事、認識外地文化，武陵農場替您想到了，即將推出此優惠方案。",
     "contain2": "大家可以好好規畫行程啦~~~超優惠的!!!"
   },
   "auth": {
@@ -226,29 +226,16 @@
     "cultural_suggest": "【七家灣文化遺址 生態之旅】南谷遊憩生態園區（含七家灣遺址原住民文化）"
   },
   "peach": {
-    "title": "107年水蜜桃銷售價格公告",
-    "juicy_peach": "水蜜桃",
-    "name": "名稱",
-    "class": "等級",
-    "spec": "規格",
-    "price": "價格",
-    "small": "小粒",
-    "big": "大粒",
-    "large": "特大",
-    "box": "粒/盒",
-    "bulk": "散裝",
-    "weight": "斤",
-    "size": "公克/粒",
-    "over": "公克以上/粒",
-    "under": "公克以下/粒"
+    "slogan": "2018年水蜜桃上市",
+    "contain": "現在正是水蜜桃採收的季節。在天然環境的栽培下，讓您買的放心，吃的安心。農場邀請您一起共享人間美味極品和欣賞武陵好風景。"
   },
-  "agricultural":{
-    "products":"農特產品",
-    "wuling_tea":"武陵茶",
-    "tea_introduction":"由於武陵農場與國家雪霸國家公園共生共存，生態保護區應優先於公有土地內設置，因此武陵農場亦須遵守野生動物保護法及國家公園法，自民國92年已漸漸轉型為有機農業之生產。歷年茶葉農藥殘留檢驗數值皆遠低於國家規定容許量，100、101年度茶葉農藥殘留量檢驗結果更達到「未檢出」水準，證明武陵長紅茶除以特有風味著稱外，實屬兼具「安全健康」之珍稀高山紅茶。",
-    "fruit":"水蜜桃、水梨和蘋果",
-    "fruit_introduction":"我們有高山溫帶地區的果實，在夏季/秋季（7月到10月是果實季節）成熟。水蜜桃和蘋果是外國賓客的最佳禮物。 通過政府機構檢驗，100%不含農藥並獲得認證標章 。",
-    "souvenirs":"特色紀念商品",
-    "souvenirs_introduction":"賣場出售帽子、衣服、裝飾品等等。這些商品都有武陵標記，非常實用而且具有紀念價值 。"    
+  "agricultural": {
+    "products": "農特產品",
+    "wuling_tea": "武陵茶",
+    "tea_introduction": "由於武陵農場與國家雪霸國家公園共生共存，生態保護區應優先於公有土地內設置，因此武陵農場亦須遵守野生動物保護法及國家公園法，自民國92年已漸漸轉型為有機農業之生產。歷年茶葉農藥殘留檢驗數值皆遠低於國家規定容許量，100、101年度茶葉農藥殘留量檢驗結果更達到「未檢出」水準，證明武陵長紅茶除以特有風味著稱外，實屬兼具「安全健康」之珍稀高山紅茶。",
+    "fruit": "水蜜桃、水梨和蘋果",
+    "fruit_introduction": "我們有高山溫帶地區的果實，在夏季/秋季（7月到10月是果實季節）成熟。水蜜桃和蘋果是外國賓客的最佳禮物。 通過政府機構檢驗，100%不含農藥並獲得認證標章 。",
+    "souvenirs": "特色紀念商品",
+    "souvenirs_introduction": "賣場出售帽子、衣服、裝飾品等等。這些商品都有武陵標記，非常實用而且具有紀念價值 。"
   }
 }
