add google map direction

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -58,7 +58,7 @@
         "room_type": "Loại phòng",
         "price": "Giá bán",
         "general_people": "Những người bình thường",
-        "special": "Công chức, quân nhân",
+        "special": "Công chức",
         "veterans": "Cựu chiến binh",
         "note": "kiểu",
         "weekdays": "Các ngày trong tuần",
