--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -59,7 +59,7 @@
     "room_type": "房型名稱",
     "price": "定價",
     "general_people": "一般民眾",
-    "special": "軍公教、榮民",
+    "special": "軍公教",
     "veterans": "榮民",
     "note": "床型 備註",
     "weekdays": "平日",
